cloud-migration/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vos-tool
  labels:
    name: vos-tool
    environment: production
